--- a/frontend/stylesheets/stage-step.css.scss
+++ b/frontend/stylesheets/stage-step.css.scss
@@ -92,7 +92,7 @@
     .canvas-containing {
       height: 100%;
       width: 100%;
-      overflow-x: hidden;
+      // overflow-x: hidden;
       overflow-y: hidden;
       position: relative;
 
