--- a/frontend/stylesheets/chai-template/pika-test/set-wells.scss
+++ b/frontend/stylesheets/chai-template/pika-test/set-wells.scss
@@ -2,7 +2,7 @@
 
 .chai-mode{
   .pika-wrapper{
-    height: 100vh;
+    height: calc(100vh - 40px);
     position: relative;
     margin: 0 !important;
     padding: 0 !important;
@@ -25,13 +25,10 @@
 
       .well-container{
         padding: 20px 40px;
-        overflow: auto;
+        overflow-x: hidden;
+        overflow-y: auto;
         height: calc(100vh - 330px);
         box-shadow: 1px 1px 1px $section-border-color;
-
-        .well-panel{
-          min-width: 1024px;
-        }
 
         h1{
           margin: 0 165px 0 40px;
