--- a/frontend/stylesheets/chai-template/directives/side-menu-layout.scss
+++ b/frontend/stylesheets/chai-template/directives/side-menu-layout.scss
@@ -8,7 +8,8 @@ $sidemenu_width_close: 0;
   &.plate-layout-state-active,
   &.samples-targets-state-active,
   &.edit-protocol-state-active,
-  &.pika-set-well-active{
+  &.pika-set-well-active,
+  &.pika-exp-result-active{
     .side-menu-layout{
       &.sidemenu-open{
         .page-wrapper{
